tests/init_state/projection/projection_init_violations.err.expected
error: at 55:5: [VF-DowncastVariantNotRefined] In function 'downcast_read_of_uninit_enum', block 'entry': cannot downcast 'o as Some' here: 'o' is not refined to variant 'Some'
    |
 55 |     a = copy o as Some;
    |     ^^^^^^^^^^^^^^^^^^
error: at 67:5: [VF-DowncastVariantNotRefined] In function 'downcast_write_through_uninit_enum', block 'entry': cannot downcast 'o as Some' here: 'o' is not refined to variant 'Some'
    |
 67 |     o as Some = 7;
    |     ^^^^^^^^^^^^^
error: at 81:5: [VF-DowncastVariantNotRefined] In function 'downcast_write_through_moved_enum', block 'entry': cannot downcast 'o as Some' here: 'o' is not refined to variant 'Some'
    |
 81 |     o as Some = 7;
    |     ^^^^^^^^^^^^^
error: at 29:5: [INIT-UseBeforeInit] In function 'branch_on_uninit_bool', block 'entry': variable 'b' is used before initialization
    |
 29 |     branch(copy b) [true: t, false: f]
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: at 41:5: [INIT-UseBeforeInit] In function 'switch_enum_on_uninit', block 'entry': variable 'o' is used before initialization
    |
 41 |     switchEnum(o) [None: end, Some: end]
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: at 55:5: [INIT-UseBeforeInit] In function 'downcast_read_of_uninit_enum', block 'entry': variable 'o' is used before initialization
    |
 55 |     a = copy o as Some;
    |     ^^^^^^^^^^^^^^^^^^
error: at 67:5: [INIT-WriteThroughUninitEnumProjection] In function 'downcast_write_through_uninit_enum', block 'entry': cannot write through variant projection: 'o' is not initialized here
    |
 67 |     o as Some = 7;
    |     ^^^^^^^^^^^^^
error: at 81:5: [INIT-WriteThroughUninitEnumProjection] In function 'downcast_write_through_moved_enum', block 'entry': cannot write through variant projection: 'o' is not initialized here
    |
 81 |     o as Some = 7;
    |     ^^^^^^^^^^^^^
